@@ -1,6 +1,8 @@
 06 Nov 2009 - 2.5.x
 -------------------
 
+ * Reserved 700,000-799,999 IDs for Ivan Ristic.
+
  * Fixed SecAction not working when CONNECT request method is used
    (MODSEC-110). [Ivan Ristic]
 
